--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,28 @@
-version: "3.8"
-
 services:
   web:
     build: .
-    container_name: fastapi_app
+    container_name: library_fastapi
     ports:
       - "8000:8000"
-
     depends_on:
       - db
-
     env_file:
       - .env
-
     volumes:
-      - .:app
-
+      - .:/app
     working_dir: /app
+    entrypoint: ["./entrypoint.sh"]
 
   db:
     image: postgres:15
-    container_name: postgres_db
+    container_name: postgres_library
     restart: always
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-
     ports:
       - "5432:5432"
-
     volumes:
       - pgdata:/var/lib/postgresql/data
 
